      thanks to \I{Mikael Jagan}.

      \item \code{cbind()} could segfault with \code{NULL} inputs.
      (Seen when \R was built with \command{gcc14}, \abbr{LTO} and C99 inlining
      semantics.)

      \item Fix segfault on \code{quartz()} from \code{grid.glyph()}
      call with \code{glyphInfo()} that describes non-existent font
      (\PR{18784}).  Thanks to \I{Tomek Gieorgijewski}.
  
    }
  }
}

\section{\Rlogo CHANGES IN R 4.4.2 patched}{
  \subsection{INSTALLATION}{
    \itemize{
      \item \R can be installed using C23 (for example with
      \option{-std=gnu23} or \option{-std=gnu2x}) with recent compilers
      including \command{gcc} 14, Apple \command{clang} 16 and \I{LLVM}
      \command{clang} 17--19.  (\I{LLVM} \command{clang} 18 and 19 objected
      to apparently valid code using attributes accepted by all the
      other compilers.)
    }
  }

  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The functions \code{R_strtod} and \code{R_atof} now allow
      hexadecimal constants without an exponent, for compatibility with
      their C99 versions (\PR{18805}).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{kappa(A, exact=TRUE)} for singular \code{A} returns
      \code{Inf} more generally, fixing \PR{18817} reported by
      \I{Mikael Jagan}.

      \item Fixed URLs of the sun spots (\code{sunspot.month} etc) data
      sets and mention future changes due to recalibration.

      \item The parser now accepts hexadecimal constants with a decimal
      point without an exponent (taken as \code{p0}) as documented in
      \code{?NumericConstants} (\PR{18819}).

      \item \code{rbind()} now works correctly when inputs include a raw
      vector and a logical, integer or double vector -- previously the
      inclusion of the latter was garbled.

      \item \code{smooth.spline()} checks validoity of its arguements
      \code{df.offset} and \code{penalty}: it could segfault if they
      were \code{NULL}.
    }